<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home_admin" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/users"
            android:title="@string/menu_users_admin" />
        <item
            android:id="@+id/nav_facilities"
            android:icon="@drawable/facility"
            android:title="@string/menu_facilities_admin" />
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/images"
            android:title="@string/menu_images_admin" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile_admin" />
    </group>
</menu>