<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_nav_organizer"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home_organizer"
        android:name="com.example.espresso.ui.home.HomeFragment"
        android:label="@string/menu_home_organizer"
        tools:layout="@layout/organizer_home" />

    <fragment
        android:id="@+id/nav_facilities_organizer"
        android:name="com.example.espresso.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_facilities_organizer"
        tools:layout="@layout/organizer_facilities" />

    <fragment
        android:id="@+id/nav_profile_organizer"
        android:name="com.example.espresso.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile_organizer"
        tools:layout="@layout/organizer_profile" />
</navigation>